# Obviate

./: .env  .env.example  .gitignore  API_Test_Report.md  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  explore_kanban.py  pyproject.toml  requirements.txt  start.bat  start_dev.py  test_smart_card_creation.py  test_smart_card_creation_clean.py
alembic/: env.py
alembic/versions/: 0a5012b28b89_add_meta_data_column_to_workspaces_table.py  65ce37c43657_initial_schema.py  f69a0eeedfa8_fix_card_model_add_meta_data_field_and_.py
app/: __init__.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  board.py  card.py  column.py  workspace.py
app/core/: config.py  database.py  dependencies.py  exceptions.py  seed_data.py
app/models/: __init__.py  attachment.py  audit_event.py  base.py  board.py  card.py  column.py  comment.py  service_token.py  workspace.py
app/repositories/: __init__.py  attachment.py  audit_event.py  base.py  board.py  card.py  column.py  comment.py  service_token.py  workspace.py
app/schemas/: __init__.py  attachment.py  audit_event.py  base.py  board.py  card.py  column.py  comment.py  service_token.py  workspace.py
debug/: README.md
debug/logs/: fastapi_test_results_20250824_050311.json  fastapi_test_results_20250824_050544.json  fastapi_test_results_20250824_051226.json  fastapi_test_results_20250824_051304.json  fastapi_test_results_20250824_051317.json  fastapi_test_results_20250824_051500.json
debug/scripts/: README.md  cleanup_test_data.py  debug_api_board_creation.py  debug_api_endpoints.py  debug_board_creation.py  debug_board_update.py  debug_card_endpoints.py  debug_column_endpoints.py  debug_complete_workflow.py  debug_template.py  debug_test_issues.py  setup_project_tracking.py  test_all_api_endpoints.py  test_api_endpoints_http.py  test_fastapi_server.py  update_project_priorities.py
docs/: API_DOCUMENTATION_INDEX.md
investigation/: API_Failure_Investigation.md
investigation/active_investigation/: Current_State_Report.md  Existing_Boards_Inventory.md  Investigation_Complete_Report.md  investigation_findings.md
scripts/: Swagger-Based-API-Test.py
